

o   Nicholas Brealey <nick@brealey.org>
    * Compile fix for pam_winbind.


o   Gerald (Jerry) Carter <jerry@samba.org>
    * Use system provided killproc() in RedHat init scripts for 
      more robust shutdown.
    * Fix a crash in the printer publishing code when adding a 
      new printer via the APW.
    * Fix broken compile of unsupported smbwrapper utility.


o   Guenther Deschner <gd@samba.org>
    * Fix different extended_dn handling in adssearch.pl
      (Thanks to Frederic Brin at Novell).


o   Volker Lendecke <vl@samba.org>
    * Fix a memleak in the server registry code for enumeration 
      shares.


o   Jason Mader <jason@ncac.gwu.edu>
    * Compiler warning fixes.


Changes since 3.0.22
--------------------
o   Jeremy Allison <jra@samba.org>
    * Fixes for various Klocwork defect reports.
    * Cleanup pdb_get_XXX() methods and ensure that a failure
      to allocate memory for a samu user structure is reported 
      as a failure to the calling function.
    * Fix memleak in printing gencache contents.
    * Fix warnings reported by gcc4 -O6 on 64-bit systems 
    * Fix naming conflicts with 'net usershare' structures and 
      Solaris header files.
    * Fix memleaks on error paths from the ASN.1 parsing code.
    * Add uid to share_mode_entry structure so we can report who 
      opened the file.
    * Ensure we use sys_write in password chats so we're not 
      interrupted.
    * Ensure all new rid allocation goes through the same pdb_ldap 
      interface.
    * BUG 3308: Stop us returning duplicate mid replies on path 
      based set-EOF trans2 calls.
    * Pass RAW-OPLOCK with kernel oplocks off.
    * Fix bug in OS/2 Warp - it doesn't set the ff_last offset 
      correctly when doing info level 1 directory scans.
    * Add Samba4 replacement for timegm() to work on Solaris.
    * Remove extra add-byte in the trans2 UNIX_BASIC infolevel.
    * BUG 3592: Ignore a file in the tar output from smbclient if the 